
2011-01-21  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #17162: Missing localization in t3lib_tsstyleconfig - add HSC
	* Fixed bug #17190: Make the drag area on the split bars wider than 1px

2011-01-21  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16935: tx_coreupdates_installversioning is obsolete

2011-01-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #17175: t3lib_compressor should write .htaccess to set Expires headers for .js/.css files (Thanks to Steffen Gebert)
	* Fixed bug #17120: Problem with the integration of third-party trees (Thanks to Stefan Galinksi)
	* Follow-up to issue #11103: Cleanup of _.htaccess and references to misc/advanced.htaccess in config_default

2011-01-21  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #17188: [reports] change status update task to use the new default From email address setting from config_default
	* Fixed issue #16458: Rename table be_layouts to backend_layout
	* Fixed issue #17191: Missing styling in Ext Js Grid Headers
	* Follow-up to #17024: Labels missing for fields without CSH
	* Updated sprite images and CSS
	* Fixed tt_content typeicon_classes mapping for search form and file list
	* Fixed issue #17199: Use of reserved word "class" breaks grid editor in Safari

2011-01-21  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17024: CSH not rendered properly in select-type fields with renderMode = checkbox
	* Fixed bug #17186: Scheduler: CSH not displayed properly in docheader

2011-01-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #17129: Minor styling issues with live search
	* Fixed bug #16702: TCEForm select dropdowns have text overlapping icon in Webkit

2011-01-21  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17167: Cache ExtDirect::getAPI calls
	* Fixed bug #17181: Add Expires header to _.htaccess

2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked